package com.ProjectGames.model;

public enum TypePlayer {

    HUMAN, BOT

}
